# kaleido3d

./: .gitignore  CMakeLists.txt  README.md  make.cmd  make32.cmd
Data/Test/: particles.comp
Include/Interface/: ICrossShaderCompiler.h  IRHI.h  IRHIDefs.h  NGFX.h  NGFXEnums.h  NGFXObjectBase.h  NGFXStructs.h  RHIEnums.h  RHIStructs.h  ShaderCommon.h
Include/KTL/: SharedPtr.hpp
Project/: Common.cmake  FindLibClang.cmake
Source/: CMakeLists.txt
Source/Core/: Os.cpp  Os.h
Source/Core/UnitTest/: UTTools.ShaderCompiler.cpp
Source/Log/Private/: LogImpl.cpp
Source/RHI/: RHIUtil.cpp  RHIUtil.h
Source/RHI/Metal/: CMakeLists.txt
Source/RHI/Metal/Private/: MetalRHI.h  MetalRHI.mm
Source/RHI/Metal/Public/: IMetalRHI.h  MetalRHIResource.h
Source/RHI/UnitTest/: 1.Device.cpp  2.SwapChainPresent.cpp  3.Triangle.cpp  3.TriangleWithDepthStencilAttachment.cpp  4.TexturedCube.cpp  5.ComputeParticles.cpp  6.MultiThreadRendering.cpp  CMakeLists.txt
Source/RHI/UnitTest/Base/: TextureObject.cpp  TextureObject.h  UTRHIAppBase.h
Source/RHI/Vulkan/: CMakeLists.txt
Source/RHI/Vulkan/Private/: VkCommandContext.cpp  VkConfig.h  VkEnums.h  VkImpl.cpp  VkObjects.cpp  VkObjects.h  VkRHI.cpp  VkRHI.h  VkResource.cpp
Source/RHI/Vulkan/Public/: IVkRHI.h
Source/Renderer/: FontRenderer.cpp  FontRenderer.h  Render.h  RenderContext.cpp
Source/Tools/CppReflector/: Main.cpp  Reflector.cpp
Source/Tools/Editor/: rendererwidget.cpp  rendererwidget.h
Source/Tools/ShaderGen/Private/: DXCompiler.cc  DXCompiler.h  GLSLCompiler.cc  GLSLCompiler.h  GLSLangUtils.cc  GLSLangUtils.h  MetalCompiler.cc  MetalCompiler.h  SPIRVCrossUtils.cc  SPIRVCrossUtils.h  ShaderCompiler.cc
Tools/RHIGenerator/: sappheiros.yml
Tools/RHIGenerator/generator/: gen.py  name.py
